Fix g_file_copy_async() annotation

https://bugzilla.gnome.org/show_bug.cgi?id=776333